--- a/sass/component/_header.sass
+++ b/sass/component/_header.sass
@@ -10,6 +10,9 @@
 .app-name
   float: left
 
+.profile-container
+  margin: auto $gutter-space
+
 .user-name, .avatar, .notification
-  margin-right: 0
   float: right
+  margin: auto
