--- a/sass/component/_image.sass
+++ b/sass/component/_image.sass
@@ -5,8 +5,6 @@
   width: 30px
   height: 30px
 
-// target the larger images (the social media svgs)
-
 // the svg img tags
 .svg-facebook, .svg-google, .svg-twitter
   background-color: #8a68ab
@@ -20,11 +18,13 @@
   margin: $gutter-space auto
   display: flex
   justify-content: space-evenly
-  padding: 3px
+  padding: 10px
+  max-width: 320px
   & > .lg-img
-    width: 80px
-    height: 80px
-    margin: 35px
+    width: 75px
+    height: 75px
+    margin: auto
+
   & > .social-stat-text-container
     float: right
     margin: auto
